Improvement to taskfile and vscode tasks
Refactored task commands in Taskfile.yml for coverage tasks. Updated vscode tasks.json to remove unnecessary properties.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,7 +36,7 @@ jobs:
           
       - name: Coverage reports
         run: |
-          task coverage
+          task coverage:generate
           
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
