Added free list allocator
Added best fit, exact fit, and first fit free list strategies.
Added limited size free list strategy.

--- a/tests/nxx/meson.build
+++ b/tests/nxx/meson.build
@@ -26,9 +26,14 @@ tests = files(
     'debug/assert.test.cpp',
     'memory/alignment.test.cpp',
     'memory/allocator/affix/memory_corruption_detector.test.cpp',
+    'memory/allocator/free_list_strategy/best_fit_free_list_strategy.test.cpp',
+    'memory/allocator/free_list_strategy/exact_fit_free_list_strategy.test.cpp',
+    'memory/allocator/free_list_strategy/first_fit_free_list_strategy.test.cpp',
+    'memory/allocator/free_list_strategy/limited_size_free_list_strategy.test.cpp',
     'memory/allocator/affix_allocator.test.cpp',
     'memory/allocator/allocator_traits.test.cpp',
     'memory/allocator/fallback_allocator.test.cpp',
+    'memory/allocator/free_list_allocator.test.cpp',
     'memory/allocator/null_allocator.test.cpp',
     'memory/allocator/prefixed_size_allocator.test.cpp',
     'memory/allocator/proxy_interface_allocator.test.cpp',
