Add test group to coverage task
Added a new group "test" to the coverage task in tasks.json.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -47,6 +47,9 @@
             "label": "coverage",
             "type": "shell",
             "command": "task coverage",
+            "group": {
+                "kind": "test"
+            },
             "dependsOn": [
                 "test"
             ]
