--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,20 +9,21 @@
             "cwd": "${workspaceFolder}/build/tests",
             "setupCommands": [
                 {
-                    "description": "Enable pretty-printing for gdb",
+                    "description": "Enable pretty printing",
                     "text": "-enable-pretty-printing",
                     "ignoreFailures": true
                 },
                 {
-                    "description": "Enable pretty-printing",
-                    "text": "source ${workspaceFolder}/pretty_printers/pretty_printers.py",
+                    "description": "Load pretty printers script",
+                    "text": "source ${workspaceFolder}/scripts/gdb/pretty_printers.py",
+                },
+                {
+                    "description": "Load skip subprojects script",
+                    "text": "source ${workspaceFolder}/scripts/gdb/skip_subprojects.py",
                 }
             ],
             "preLaunchTask": "compile",
-            "internalConsoleOptions": "openOnSessionStart",
-            "logging": {
-                "engineLogging": true
-            }
+            "internalConsoleOptions": "openOnSessionStart"
         }
     ]
 }
